# D2MXLUtils

./: .gitignore  CHANGELOG.md  CLAUDE.md  D2Stats.au3  D2StatsOldVerison.au3  README.md  cliff.toml  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.claude/: settings.local.json
.cursor/plans/: autocomplete-editor.plan.md  codemirror-integration.plan.md  d2m-8b56206f.plan.md
.github/workflows/: release.yml
.husky/: pre-commit  pre-push
docs/: autocomplete.md  d2gl-analysis.md  d2mxlutils-elevation-issue.md  d2mxlutils-refactoring.plan.md  drop-notification-latency.md  filter-preview-todo.md  hide-show-analysis.md  hide-show-debug-report.md  index.md  index_D2StatsOldVersion.md  item-tables-memory.md  known-bugs.md  loot-filter-cache-problem.md  loot-filter-dsl.md  loot-filter-examples.md  loot-filter-gotchas.md  loot-filter-reverse-engineering.md  loot-filter-review-bugs.md  loot-filter-ui-integration-report.md  loot-history-reverse-engineering.md  map-marker-reverse-engineering.md  overlay-fullscreen-notes.md  progress-checkpoint-2025-12-01.md
docs/filter_spec/: flag-combination-logic.md  legacy-migration.md  loot-filter-dsl.md  loot-filter-examples.md  loot-filter-hook-specification.md  loot-filter-implementation-report.md  loot-filter-spec.md
scripts/: sync-version.mjs
src/: App.svelte  app.css  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: breakpoints.rs  d2types.rs  hotkeys.rs  injection.rs  items_cache.rs  logger.rs  loot_filter_hook.rs  loot_history.rs  main.rs  map_marker.rs  marker_scanner.rs  notifier.rs  offsets.rs  process.rs  profiles.rs  rules.rs  scanner_state.rs  settings.rs  sounds.rs  speedcalc_data.rs  updater.rs  weapon_families.rs
src-tauri/src/rules/: dsl.rs  explain.rs  matching.rs  mod.rs
src/components/: AlwaysShowItemsIndicator.svelte  Button.svelte  HotkeyInput.svelte  Input.svelte  (+10 more)
(+34 files in other folders)
