[package]
name = "d2mxlutils"
version = "1.20.1"
description = "D2MXLUtils Drop Notifier backend"
authors = ["D2MXLUtils"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
chrono = { version = "0.4", features = ["clock", "std"] }
self_update = "0.44"
# For typed header constants (ACCEPT) passed to self_update::Download::set_header.
http = "1"
semver = "1"
ureq = "3"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    # Features for elevated process handling (WEBVIEW2_USER_DATA_FOLDER fix)
    "Win32_UI_Shell",
    "Win32_System_Com",
    # Features for global hotkeys
    "Win32_UI_Input_KeyboardAndMouse",
    # Disable Windows 11 DWM border on the transparent overlay
    "Win32_Graphics_Dwm"
] }

